--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,14 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.6.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+    -   id: check-toml
 -   repo: https://github.com/psf/black
-    rev: 23.7.0
+    rev: 24.8.0
     hooks:
     -   id: black
 -   repo: https://github.com/PyCQA/isort
@@ -15,3 +16,16 @@ repos:
     hooks:
     -   id: isort
         name: isort (python)
+-   repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.5.5'
+    hooks:
+    -   id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v1.11.0'
+    hooks:
+    -   id: mypy
+        additional_dependencies: [types-PyYAML, types-requests]
+        exclude: 'finops_venv_py312'
+
+exclude: 'finops_venv_py312'
