--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "ydata-profiling>=4.6.4",
     "setuptools>=61.0",
-    "google-genai>=0.5.2",
+    "google-generativeai>=0.5.2",
 ]
 
 [project.urls]
