--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,11 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "ydata-profiling>=4.6.4",
     "setuptools>=61.0",
-    "google-generativeai>=0.5.2",
+        "google-generativeai>=0.5.4",
+    "google-cloud-aiplatform>=1.58.0",
+    "ipywidgets>=8.1.3",
+    "matplotlib>=3.9.2",
+    "numpy>=2.1.3"
 ]
 
 [project.urls]
