fix(ci): Add GitHub Actions language to CodeQL analysis
Updates the CodeQL workflow to also analyze the syntax of the GitHub Actions workflow files themselves. This resolves the informational warning about a missing 'actions' language configuration and adds an extra layer of security scanning to the CI pipeline.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -21,9 +21,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'python' ]
-        # Analysis is most effective on the latest supported version.
-        # Running on multiple versions is redundant for CodeQL's static analysis.
+        language: [ 'python', 'actions' ]
+        # We don't need to specify a python-version for the 'actions' language
+        # but we can keep it for the 'python' language.
+        # CodeQL will handle this gracefully.
         python-version: [ '3.12' ]
 
     steps:
